# AMRGeneCC

./: CITATION.cff  README.md  pyproject.toml
amrgene/: amr_gene_script.py  cli.py
