[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "amrgeneCC"
version = "0.1.0"
description = "Concatenate AMR gene results from ncbi amrfinder results files"
requires-python = ">=3.8"
dependencies = [
    "pandas",
]

[project.scripts]
amrgene = "amrgene.cli:main"